fixed paragraph width is too small

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,6 +82,14 @@ a {
   @apply container px-28 py-14 w-1/2 h-full bg-primary;
 }
 
+.back-button {
+  @apply relative w-fit-content top-14 left-1/4 cursor-pointer;
+}
+
+.page-paragraph {
+  @apply mt-4 w-1/3 mx-auto text-left indent-10;
+}
+
 @media screen and (max-width: 768px) {
   .work-list-container {
     @apply grid grid-cols-1;
@@ -123,6 +131,14 @@ a {
     width: 270px;
     height: 270px;
     @apply rounded-full;
+  }
+
+  .back-button {
+    @apply relative w-fit-content top-10 left-6 cursor-pointer;
+  }
+
+  .page-paragraph {
+    @apply w-11/12;
   }
 }
 
